[package]
name = "plexmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = {version="*", features=["derive"]}
plex-api = "0.0.11"
tokio = {version="1.29.1", features=["full"]}
serde = "1.0.171"
serde_json = "1.0.103"
isahc = "1.7.2"
toml = "0.7.6"